<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SecondFragment">

    <TextView
        android:id="@+id/lblSecondScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_fragment_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16.dp" />

    <TextView
        android:id="@+id/txtSubjectDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_details" />

    <TextView
        android:id="@+id/subjectId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_id" />

    <TextView
        android:id="@+id/subjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_name" />

    <TextView
        android:id="@+id/subjectChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_checked" />

    <TextView
        android:id="@+id/categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16.dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_button_text" />

</LinearLayout>